--- a/mongodb-express/app/package.json
+++ b/mongodb-express/app/package.json
@@ -1,12 +1,29 @@
 {
+  "author": "https://github.com/andzdroid",
   "name": "mongo-express",
-  "description": "Run mongo-express",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node ./node_modules/mongo-express/app.js"
+  "description": "Web-based admin interface for MongoDB",
+  "version": "0.21.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/andzdroid/mongo-express.git"
   },
   "dependencies": {
-    "mongo-express": "*"
-  }
+    "express": "~3.4.8",
+    "mongodb": "~2.0",
+    "consolidate": "~0.10.0",
+    "swig": "~1.3.2",
+    "underscore": "~1.6.0",
+    "async": "~0.8.0"
+  },
+  "devDependencies": {
+    "mocha": "~1.18.2",
+    "chai": "~1.9.1"
+  },
+  "engine": "node >= 0.10",
+  "license": "MIT",
+  "scripts": {
+    "start": "node app",
+    "test": "./node_modules/.bin/mocha"
+  },
+  "main": "./app"
 }
