Added webcrt example using peerjs and peerjs-server

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ node_modules
 /mongodb-express/app/*
 /rabbitmq/build/rabbitmq-server_3.5.3-1_all.deb
 /rabbitmq/log
+/webcrt/app/static/peer.js
+/webcrt/app/static/jquery.min.js
+
